<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/textAuthor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:maxLines="10"
        android:singleLine="false"
        android:text="@string/main_string"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_form1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_form1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bg_button"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/form1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_form2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAuthor" />

    <Button
        android:id="@+id/button_form2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bg_button"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/form2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_form3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_form1" />

    <Button
        android:id="@+id/button_form3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/bg_button"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/form3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_form2" />
</androidx.constraintlayout.widget.ConstraintLayout>