<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="63dp"
            android:layout_height="63dp"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="62dp"
            android:background="@drawable/bg_text_edit_blue"
            android:ems="10"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:text=""
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toStartOf="@+id/editTextNumber2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.439" />

        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="62dp"
            android:background="@drawable/bg_text_edit_blue"
            android:ems="10"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:text=""
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@+id/editTextNumber5"
            app:layout_constraintStart_toEndOf="@+id/editTextNumber"
            app:layout_constraintTop_toTopOf="@+id/editTextNumber"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editTextNumber5"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="62dp"
            android:background="@drawable/bg_text_edit_blue"
            android:ems="10"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:text=""
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@+id/editTextNumber4"
            app:layout_constraintStart_toEndOf="@+id/editTextNumber2"
            app:layout_constraintTop_toTopOf="@+id/editTextNumber" />

        <EditText
            android:id="@+id/editTextNumber4"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="62dp"
            android:background="@drawable/bg_text_edit_blue"
            android:ems="10"
            android:fontFamily="@font/montserrat_alternates_bold"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextNumber5"
            app:layout_constraintTop_toTopOf="@+id/editTextNumber" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="141dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="141dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_horizontal|top"
            android:text="@string/time"
            android:textColor="@color/text_color"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="29dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center_horizontal|top"
            android:text="@string/hint_under_time"
            android:textColor="@color/color_grey_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/button"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_button"
            android:text="@string/send_new_code"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="144dp"
            android:layout_marginEnd="145dp"
            android:layout_marginBottom="182dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/back"
            android:textColor="@color/checked_nav_bottom"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>